--- a/theme/css/developers.nl.css
+++ b/theme/css/developers.nl.css
@@ -1,12 +1,17 @@
 .reveal
 {
     background: #4db4ff url(../img/logo.svg) no-repeat fixed .5em .5em;
-    background-size: 33vh;
+    background-size: 8em;
     color: #595959;
     transition: background 1s;
 }
 
-html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd, .reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend, .reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th, .reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video
+.reveal mark
+{
+    color: #595959;
+}
+
+html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd, .reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend, .reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th, .reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video
 {
     font-family: 'Roboto Mono', monospace;
     font-size: 2.4vw;
@@ -118,9 +123,9 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 @keyframes glow {
     0%   { background-color: rgba(255, 255, 0, 0); }
     20%  { background-color: rgba(255, 255, 0, 1); }
-    40%  { background-color: rgba(255, 255, 0, 0.2); }
+    40%  { background-color: rgba(255, 255, 0, 0.25); }
     60%  { background-color: rgba(255, 255, 0, 1); }
-    80%  { background-color: rgba(255, 255, 0, 0.2); }
+    80%  { background-color: rgba(255, 255, 0, 0.5); }
     100% { background-color: rgba(255, 255, 0, 1); }
 }
 
@@ -243,10 +248,70 @@ html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal i
 .reveal code *
 {
     font-size: 1.2vw;
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 .reveal pre code
 {
     max-height: 80vh;
+}
+
+/******************************************************************************
+ * Navigation Controls
+ *****************************************************************************/
+.reveal .controls .navigate-left,
+.reveal .controls .navigate-left.enabled
+{
+    border-right-color: rgba(241, 122, 22, .5);
+}
+
+.reveal .controls .navigate-right,
+.reveal .controls .navigate-right.enabled
+{
+    border-left-color: rgba(241, 122, 22, .5);
+}
+
+.reveal .controls .navigate-up,
+.reveal .controls .navigate-up.enabled
+{
+    border-bottom-color: rgba(241, 122, 22, .5);
+}
+
+.reveal .controls .navigate-down,
+.reveal .controls .navigate-down.enabled
+{
+    border-top-color: rgba(241, 122, 22, .5);
+}
+
+.reveal .controls .navigate-left.enabled:hover
+{
+    border-right-color: rgba(241, 122, 22, 1);
+}
+
+.reveal .controls .navigate-right.enabled:hover
+{
+    border-left-color: rgba(241, 122, 22, 1);
+}
+
+.reveal .controls .navigate-up.enabled:hover
+{
+    border-bottom-color: rgba(241, 122, 22, 1);
+}
+
+.reveal .controls .navigate-down.enabled:hover
+{
+    border-top-color: rgba(241, 122, 22, 1);
+}
+
+/******************************************************************************
+ * Progress bar
+ *****************************************************************************/
+.reveal .progress
+{
+    background: rgba(0, 0, 0, 0.2);
+}
+
+.reveal .progress span
+{
+    background: rgba(241, 122, 22, 1);
 }
