--- a/theme/css/developers.nl.css
+++ b/theme/css/developers.nl.css
@@ -11,12 +11,22 @@
     color: #595959;
 }
 
-html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd, .reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend, .reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th, .reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video
+html, body, .reveal
 {
     font-family: 'Roboto Mono', monospace;
     font-size: 2.4vw;
 }
 
+.reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd, .reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend, .reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th, .reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video
+{
+    font-family: inherit;
+    font-size: inherit;
+}
+
+.reveal section img
+{
+    border: none;
+}
 
 .reveal .slides > section,
 .reveal .slides > section > section
@@ -81,7 +91,7 @@ html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, 
     float: right;
     background-color: white;
     height: 100vh;
-    width: calc(50% - 2em);
+    width: calc(50% - 4em);
     padding: 0 1em;
     position: absolute;
     top: 0;
@@ -90,6 +100,11 @@ html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, 
     justify-content: center;
     align-content: center;
     flex-direction: column;
+}
+
+.reveal #white-pane
+{
+    width: 50%;
 }
 
 .reveal.overview #white-pane
@@ -185,6 +200,34 @@ html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, 
     margin-left: 1em;
 }
 
+.reveal article sup
+{
+    font-size: 50%;
+}
+
+.reveal article .references
+{
+    font-size: 1vw;
+    counter-reset: reference;
+    list-style: none;
+    padding-left: 2em;
+    margin-left: 0;
+}
+.reveal article .references li
+{
+    counter-increment: reference;
+}
+.reveal article .references li:before
+{
+    font-size: .75vw;
+    content: '[' counter(reference) ']';
+    margin-left: -3em;
+    margin-right: 3em;
+    width: 0;
+    display: inline-block;
+    vertical-align: top;
+}
+
 /******************************************************************************
  * Cloud styles
  *****************************************************************************/
@@ -258,16 +301,21 @@ html, body, .reveal, .reveal div, .reveal span, .reveal applet, .reveal object, 
  * Code styles
  *****************************************************************************/
 
-.reveal code,
-.reveal code *
+.reveal code
 {
     font-size: 1.2vw;
     line-height: 1.5;
 }
 
+.reveal pre
+{
+    margin: 0;
+    width: 100%;
+}
+
 .reveal pre code
 {
-    max-height: 80vh;
+    max-height: calc(100vh - 4em);
 }
 
 /******************************************************************************
