--- a/theme/css/developers.nl.css
+++ b/theme/css/developers.nl.css
@@ -7,267 +7,25 @@
  * reveal.js is Copyright (C) 2011-2012 Hakim El Hattab, http://hakim.se
  */
 
-/**
- * SIMPLE STYLE
- */
-
-/*********************************************
- * GLOBAL STYLES
- *********************************************/
 ::selection
 {
     color: #fff;
-    background: rgba(0, 0, 0, 0.99);
+    background: rgba(241, 122, 21, 0.99);
     text-shadow: none;
 }
 
 ::-moz-selection
 {
     color: #fff;
-    background: rgba(0, 0, 0, 0.99);
+    background: rgba(241, 122, 21, 0.99);
     text-shadow: none;
 }
 
-/*********************************************
- * HEADERS
- *********************************************/
-.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6
+html, body, .reveal
 {
-    margin: 0 0 20px 0; /* TODO: px size */
-    color: #000;
-    font-weight: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-transform: none;
-    text-shadow: none;
-    word-wrap: break-word;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 2.4vw;
 }
-
-/*********************************************
- * OTHER
- *********************************************/
-.reveal p {
-    margin: 20px 0;
-    line-height: 1.3; }
-
-/* Ensure certain elements are never larger than the slide itself */
-.reveal img,
-.reveal video,
-.reveal iframe {
-    max-width: 95%;
-    max-height: 95%; }
-
-.reveal strong,
-.reveal b {
-    font-weight: bold; }
-
-.reveal em {
-    font-style: italic; }
-
-.reveal ol,
-.reveal dl,
-.reveal ul {
-    display: inline-block;
-    text-align: left;
-    margin: 0 0 0 1em; }
-
-.reveal ol {
-    list-style-type: decimal; }
-
-.reveal ul {
-    list-style-type: disc; }
-
-.reveal ul ul {
-    list-style-type: square; }
-
-.reveal ul ul ul {
-    list-style-type: circle; }
-
-.reveal ul ul,
-.reveal ul ol,
-.reveal ol ol,
-.reveal ol ul {
-    display: block;
-    margin-left: 40px; }
-
-.reveal dt {
-    font-weight: bold; }
-
-.reveal dd {
-    margin-left: 40px; }
-
-.reveal q,
-.reveal blockquote {
-    quotes: none; }
-
-.reveal blockquote {
-    display: block;
-    position: relative;
-    width: 70%;
-    margin: 20px auto;
-    padding: 5px;
-    font-style: italic;
-    background: rgba(255, 255, 255, 0.05);
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); }
-
-.reveal blockquote p:first-child,
-.reveal blockquote p:last-child {
-    display: inline-block; }
-
-.reveal q {
-    font-style: italic; }
-
-.reveal pre {
-    display: block;
-    position: relative;
-    width: 90%;
-    margin: 20px auto;
-    text-align: left;
-    font-size: 0.55em;
-    font-family: monospace;
-    line-height: 1.2em;
-    word-wrap: break-word;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
-
-.reveal code {
-    font-family: monospace; }
-
-.reveal pre code {
-    display: block;
-    padding: 5px;
-    overflow: auto;
-    max-height: 400px;
-    word-wrap: normal; }
-
-.reveal table {
-    margin: auto;
-    border-collapse: collapse;
-    border-spacing: 0; }
-
-.reveal table th {
-    font-weight: bold; }
-
-.reveal table th,
-.reveal table td {
-    text-align: left;
-    padding: 0.2em 0.5em 0.2em 0.5em;
-    border-bottom: 1px solid; }
-
-.reveal table th[align="center"],
-.reveal table td[align="center"] {
-    text-align: center; }
-
-.reveal table th[align="right"],
-.reveal table td[align="right"] {
-    text-align: right; }
-
-.reveal table tbody tr:last-child th,
-.reveal table tbody tr:last-child td {
-    border-bottom: none; }
-
-.reveal sup {
-    vertical-align: super; }
-
-.reveal sub {
-    vertical-align: sub; }
-
-.reveal small {
-    display: inline-block;
-    font-size: 0.6em;
-    line-height: 1.2em;
-    vertical-align: top; }
-
-.reveal small * {
-    vertical-align: top; }
-
-/*********************************************
- * LINKS
- *********************************************/
-.reveal a {
-    color: #00008B;
-    text-decoration: none;
-    -webkit-transition: color .15s ease;
-    -moz-transition: color .15s ease;
-    transition: color .15s ease; }
-
-.reveal a:hover {
-    color: #0000f1;
-    text-shadow: none;
-    border: none; }
-
-.reveal .roll span:after {
-    color: #fff;
-    background: #00003f; }
-
-/*********************************************
- * IMAGES
- *********************************************/
-.reveal section img {
-    margin: 15px 0px;
-    background: rgba(255, 255, 255, 0.12);
-    border: 4px solid #000;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
-
-.reveal section img.plain {
-    border: 0;
-    box-shadow: none; }
-
-.reveal a img {
-    -webkit-transition: all .15s linear;
-    -moz-transition: all .15s linear;
-    transition: all .15s linear; }
-
-.reveal a:hover img {
-    background: rgba(255, 255, 255, 0.2);
-    border-color: #00008B;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
-
-/*********************************************
- * NAVIGATION CONTROLS
- *********************************************/
-.reveal .controls .navigate-left,
-.reveal .controls .navigate-left.enabled {
-    border-right-color: #00008B; }
-
-.reveal .controls .navigate-right,
-.reveal .controls .navigate-right.enabled {
-    border-left-color: #00008B; }
-
-.reveal .controls .navigate-up,
-.reveal .controls .navigate-up.enabled {
-    border-bottom-color: #00008B; }
-
-.reveal .controls .navigate-down,
-.reveal .controls .navigate-down.enabled {
-    border-top-color: #00008B; }
-
-.reveal .controls .navigate-left.enabled:hover {
-    border-right-color: #0000f1; }
-
-.reveal .controls .navigate-right.enabled:hover {
-    border-left-color: #0000f1; }
-
-.reveal .controls .navigate-up.enabled:hover {
-    border-bottom-color: #0000f1; }
-
-.reveal .controls .navigate-down.enabled:hover {
-    border-top-color: #0000f1; }
-
-/*********************************************
- * PROGRESS BAR
- *********************************************/
-.reveal .progress {
-    background: rgba(0, 0, 0, 0.2); }
-
-.reveal .progress span {
-    background: #00008B;
-    -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-    -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-    transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
-
-/**
- * END SIMPLE STYLE
- */
 
 .reveal
 {
@@ -277,26 +35,108 @@
     transition: background 1s;
 }
 
-.reveal mark
-{
-    color: #595959;
-}
-
-html, body, .reveal
-{
-    font-family: 'Roboto Mono', monospace;
-    font-size: 2.4vw;
-}
-
 .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe, .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre, .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code, .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp, .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var, .reveal b, .reveal u, .reveal center, .reveal dl, .reveal dt, .reveal dd, .reveal ol, .reveal ul, .reveal li, .reveal fieldset, .reveal form, .reveal label, .reveal legend, .reveal table, .reveal caption, .reveal tbody, .reveal tfoot, .reveal thead, .reveal tr, .reveal th, .reveal td, .reveal article, .reveal aside, .reveal canvas, .reveal details, .reveal embed, .reveal figure, .reveal figcaption, .reveal footer, .reveal header, .reveal hgroup, .reveal menu, .reveal nav, .reveal output, .reveal ruby, .reveal section, .reveal summary, .reveal time, .reveal mark, .reveal audio, .reveal video
 {
     font-family: inherit;
     font-size: inherit;
 }
 
+.reveal a
+{
+    text-decoration: none;
+    color: rgb(51, 122, 183);
+}
+
+.reveal mark
+{
+    color: #595959;
+}
+
+.reveal q
+{
+    quotes: none;
+    font-style: italic;
+}
+
+.reveal sup
+{
+    vertical-align: super;
+}
+
+.reveal sub
+{
+    vertical-align: sub;
+}
+
+.reveal small
+{
+    display: inline-block;
+    line-height: 1.2em;
+}
+
+.reveal img,
+.reveal video,
+.reveal iframe
+{
+    max-width: 95%;
+    max-height: 95%;
+}
+
+.reveal strong,
+.reveal b
+{
+    font-weight: bold;
+}
+
+.reveal em
+{
+    font-style: italic;
+}
+
+.reveal ol,
+.reveal dl,
+.reveal ul
+{
+    display: inline-block;
+    text-align: left;
+    margin: 0 0 0 1em;
+}
+
+.reveal ol
+{
+    list-style-type: decimal;
+}
+
+.reveal ul
+{
+    list-style-type: disc;
+}
+
+.reveal ul ul
+{
+    list-style-type: square;
+}
+
+.reveal ul ul ul
+{
+    list-style-type: circle;
+}
+
+.reveal ul ul,
+.reveal ul ol,
+.reveal ol ol,
+.reveal ol ul
+{
+    display: block;
+    margin-left: 1em;
+}
+
 .reveal section img
 {
     border: none;
+    margin: .5em 0;
+    background: rgba(255, 255, 255, 0.12);
+    box-shadow: 0 0 .3em rgba(0, 0, 0, 0.15);
 }
 
 .reveal .slides > section,
@@ -308,6 +148,18 @@ html, body, .reveal
 .reveal small
 {
     color: #595959;
+}
+
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6
+{
+    margin: 0 0 .25em 0;
+    color: #000;
+    font-weight: normal;
+    line-height: 1.2;
+    letter-spacing: normal;
+    text-transform: none;
+    text-shadow: none;
+    word-wrap: break-word;
 }
 
 .reveal h1 + small { font-size: 1.7em; }
@@ -582,11 +434,24 @@ html, body, .reveal
 {
     margin: 0;
     width: 100%;
+    display: block;
+    position: relative;
+    text-align: left;
+    font-size: 0.55em;
+    font-family: monospace;
+    line-height: 1.2em;
+    word-wrap: break-word;
+    box-shadow: 0 0 .25em rgba(0, 0, 0, 0.3);
 }
 
 .reveal pre + pre
 {
     margin-top: 1em;
+}
+
+.reveal code
+{
+    font-family: monospace;
 }
 
 .reveal pre code
@@ -647,4 +512,5 @@ html, body, .reveal
 .reveal .progress span
 {
     background: rgba(241, 122, 22, 1);
+    transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
