--- a/theme/css/developers.nl.css
+++ b/theme/css/developers.nl.css
@@ -361,61 +361,67 @@ html, body, .reveal
     width: 100%;
     z-index: 100;
     opacity: 1;
-}
-
-#clouds > div
-{
-    transition-property: all;
     transition-duration: 800ms;
 }
 
-.reveal.large-sun:not(.overview) #clouds > div
-{
-    transform: scale(1.5, 1.5);
-}
-
-.reveal[data-transition-speed="fast"] #clouds > div
+.reveal[data-transition-speed="fast"] #clouds
 {
     transition-duration: 400ms;
 }
 
-.reveal[data-transition-speed="slow"] #clouds > div
+.reveal[data-transition-speed="slow"] #clouds
 {
     transition-duration: 1200ms;
 }
 
-.reveal:not(.overview) #clouds.hidden > div
+#clouds::before,
+#clouds::after
 {
-    height: 0;
-    opacity: 0;
+    transition-property: all;
+    transition-duration: inherit;
+    position: absolute;
+
+    background: none no-repeat bottom;
+    background-size: 100% auto;
+    content: "";
+    display: block;
 }
 
-#clouds .cloud-1
+#clouds::before
 {
-    position: absolute;
-    left: 66%;
+    background-image: url(../img/cloud-1.png);
     width: 4em;
     height: 4em;
-    background: url(../img/cloud-1.png) no-repeat bottom;
-    background-size: 100% auto;
+    left: 66%;
 }
 
-.reveal.large-sun:not(.overview) #clouds .cloud-1
+#clouds::after
+{
+    background-image: url(../img/cloud-2.png);
+    height: 5em;
+    width: 5em;
+    left: 80%;
+}
+
+.reveal:not(.overview) #clouds.hidden::before,
+.reveal:not(.overview) #clouds.hidden::after
+{
+    height: 0;
+    opacity: .5;
+}
+
+.reveal.large-sun:not(.overview) #clouds::before,
+.reveal.large-sun:not(.overview) #clouds::after
+{
+    transform: scale(1.5, 1.5);
+}
+
+.reveal.large-sun:not(.overview) #clouds::before
 {
     left: 55%;
 }
 
-#clouds .cloud-2
-{
-    position: absolute;
-    left: 80%;
-    height: 5em;
-    width: 5em;
-    background: url(../img/cloud-2.png) no-repeat bottom;
-    background-size: 100% auto;
-}
-
-.reveal.large-sun:not(.overview) #clouds .cloud-2
+.reveal.large-sun:not(.overview) #clouds::after
 {
     height: 6em;
 }
@@ -512,5 +518,5 @@ html, body, .reveal
 .reveal .progress span
 {
     background: rgba(241, 122, 22, 1);
-    transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+    transition: width 800ms ease;
 }
